# raster-core

./: .gitignore  CMakeLists.txt  compile_commands.json  update_compile_commands.sh
include/: RasterCore.hpp  RasterTypes.hpp  Viewport.hpp  ViewportManager.hpp  rasterCore.hpp  rasterTypes.hpp  viewport.hpp  viewportManager.hpp
shaders/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  debug.frag.slang  debug.vert.slang  textured.frag  textured.frag.slang  textured.vert  textured.vert.slang  textured.vert.spv
src/: RasterCoreHelpers.cpp  RasterCoreInternal.hpp  RasterPipelineBuild.cpp  RasterPipelineImage.cpp  RasterPipelineInit.cpp  RasterPipelinePublic.cpp  RasterPipelineRender.cpp  RasterPipelineScene.cpp
src/core/: Helpers.cpp  Internal.hpp
src/pipeline/: PipelineBuild.cpp  PipelineImage.cpp  PipelineInit.cpp  PipelinePublic.cpp  PipelineRender.cpp  PipelineScene.cpp  internal.hpp
src/viewport/: Viewport.cpp  ViewportImpl.hpp  ViewportManager.cpp  ViewportManagerImpl.hpp  viewportImpl.hpp  viewportManagerImpl.hpp
